# stock-master

./: .gitignore  README.md  SKILL.md  pyproject.toml  todo.md
docs/: maintenance.md
docs/plans/: 2026-04-08-stock-master-engineering-refactor.md  2026-04-09-stock-master-provider-routing-opencli.md  2026-04-10-stock-master-capability-market-query-routing-plan.md
references/: capital-flow.md  financial-metrics.md  forensics-esg.md  fundamental.md  news.md  prediction.md  sector.md  sentiment.md  technical.md  value-detective.md
scripts/: _bootstrap.py  analyze_stock.py  data_source.py
scripts/datasource/: __init__.py  backend.py  interface.py  runtime.py  service.py
scripts/datasource/providers/: __init__.py  adata.py  akshare.py  baostock.py  base.py  opencli.py
scripts/stock_analysis/: __init__.py  render.py  report.py  summaries.py
scripts/stock_common/: __init__.py  cache.py  symbols.py  system.py
src/stock_master/: __init__.py  __main__.py  cli.py  opencli_installer.py
src/stock_master/analysis/: __init__.py  cli.py  (+7 more)
tests/: __init__.py  support.py  test_analysis_intents.py  test_analyze_stock.py  test_datasource_backend.py  test_datasource_interface.py  test_datasource_live_smoke.py  test_datasource_runtime.py  test_datasource_schema.py  test_datasource_service.py  test_opencli_installer.py  test_provider_adata.py  test_provider_akshare.py  test_provider_baostock.py  test_provider_live_contract.py  test_provider_opencli.py  test_stock_analysis_extractors.py  test_stock_analysis_fundamentals.py  test_stock_analysis_indicators.py  test_stock_common.py
(+66 files in other folders)
